# booth

./: Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
booth/: __init__.py  auth.py  booth.py  constants.py  db.py  offers.py  offers_api.py  scheduler.py  schema.sql
booth/static/: style.css
booth/templates/: base.html
booth/templates/auth/: login.html  register.html
booth/templates/booth/: delete.html  edit.html  history.html  index.html  offers.html  register.html
tests/: conftest.py  data.sql  test_auth.py  test_booth.py  test_db.py  test_offers.py  test_offers_api.py  test_scheduler.py
