[project]
name = "booth"
version = "0.0.1"
description = "A REST API Python microservice which allows users to browse a product catalogue and which automatically updates prices from the offer service."
dependencies = [
	"flask",
  "Flask-APScheduler",
	"requests",
]

[project.optional-dependencies]
test = [
  "coverage",
  "pytest",
  "requests-mock",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.coverage.run]
branch = true
source = ["booth"]
